--- a/lite/cpf-lite-manifest.json
+++ b/lite/cpf-lite-manifest.json
@@ -4,7 +4,7 @@
   
     "created": "2025-06-05",
     "author": "Brahim BIDI",
-"idea_vibing":AI Language Model (Claude, Gemini, Grok, Gpt, Deepseek)",
+"idea_vibing":"AI Language Model (Claude, Gemini, Grok, Gpt, Deepseek)",
     
   "description": "Smart Aggregated Probabilistic Cognitive Framework - All 17 concepts in 5 quantum modules",
   "subtitle": "From Linear AI Thinking to Probabilistic Human Cognition Understanding",
