--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cpf",
+  "author": "Brahim BIDI",
   "description": "manza, World!",
-  "main": "wino.js"
+  "main": "lite/wino.js"
   
 }
