--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cpf",
+  "name": "cpf-vectorial",
   "author": "Brahim BIDI",
   "description": "manza, World!",
   "main": "lite/wino.js"
